kubernetes/_old/csmsearch.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: csmsearch
spec:
  selector:
    matchLabels:
      app: csmsearch
  replicas: 1
  strategy: 
    type: Recreate
  template:
    metadata:
      labels:
        app: csmsearch
    spec:
      containers:
      - name: csmsearch
        image: kelog/csmsearch:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: csmsearch
spec:
  selector:
    app: csmsearch
  ports:
  - port: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: smsalerts
spec:
  rules:
  - host: csmsearch.kelog.pl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: csmsearch
            port:
              number: 8080
